# ComputerScienze-Project

./: AES_DATA-16384  AES_DATA-2048  AES_DATA-64  CMakeLists.txt  README.md  main.c  multithread.c  tempoFile.c
Gem5-Script/part1/: caches.py  simple.py  two_level.py
Gem5-Script/part3/: msi_caches.py  ruby_caches_MI_example.py  simple_ruby.py
Test Bench Program/: CMakeLists.txt  aes.h  conta.c  creafile.c  multithread.c  tempoFile.c
TestBench executables/AES-16384/: AES_128key  AES_192key  AES_256key
TestBench executables/AES-16384/thread/: AES_T_128key  AES_T_192key  AES_T_256key
TestBench executables/AES-2048/: AES_128key  AES_192key  AES_256key
TestBench executables/AES-2048/thread/: AES_T_128key  AES_T_192key  AES_T_256key
TestBench executables/AES-64/: AES_128key  AES_192key  AES_256key
TestBench executables/AES-64/thread/: AES_T_128key  AES_T_192key  AES_T_256key
TestBench executables/CBC-CTR_compare/cbc/: 16384-256key  64-128key
TestBench executables/CBC-CTR_compare/ctr/: 16384-128key  16384-192key  16384-256key  64-256key
TestBench executables/confronto/cbc/: 16384-128key  16384-192key  64-192key  64-256key
TestBench executables/confronto/ctr/: 64-128key  64-192key
TestBench executables/tempoFile/: TEMPOFILE-16384  TEMPOFILE-2048  TEMPOFILE-64
TestBench executables/tempoFile/thread/: 16384  2048  64
result/: Data analysis.xlsx  time table
result/simple/16384/128/: config.ini  config.json  stats.txt
result/simple/16384/192/: config.dot  stats.txt
result/simple/16384/256/: config.dot  config.ini  config.json  stats.txt
(+220 files in other folders)
